# tarot-front

./: .gitignore  Cargo.toml  README.md
html/: index.html
src/: config.rs  connector.rs  error.rs  lib.rs  main.rs
src/resources/: card.rs  deck.rs
