[package]
name = "tarot-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2" }
bevy = { version = "0.13" }
bevy_simple_text_input = { git = "https://github.com/rparrett/bevy_simple_text_input.git", branch = "latest" }

reqwest-wasm = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }

rand = { version = "0.8" }
